weblio/form-proxy/admin/form-proxy-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: form-proxy-admin
  namespace: form-proxy
  labels:
    app.kubernetes.io/name: form-proxy-admin
    app.kubernetes.io/component: email
    app.kubernetes.io/part-of: weblio
spec:
  selector:
    app.kubernetes.io/name: form-proxy-admin
    app.kubernetes.io/component: email
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
